# capital_eye

./: LICENSE  README.md  df_news.csv  main.py  main_01.py  main_02.py  main_03.py  main_04.py  prompts.py  pyproject.toml  razones_financieras_df.csv
